force-app/main/default/objects/Pedido_do_Evento__c/Pedido_do_Evento__c.object-meta.xml
<CustomObject>
    <label>Solicitação de Marketing</label>
    <nameField>
        <displayFormat>PE-{0000}</displayFormat>
        <label>Pedido do Evento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solicitações de Marketing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>