force-app/main/default/objects/Pedido_do_Evento__c/fields/Evento__c.field-meta.xml
<CustomField>
    <fullName>Evento__c</fullName>
    <label>Evento</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Pedidos_do_Evento</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>