force-app/main/default/objects/Pedido_do_Evento__c/fields/Material_de_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Material_de_Marketing__c</fullName>
    <label>Material de Marketing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>