force-app/main/default/objects/Pedido_do_Evento__c/fields/Solicita_o_especial__c.field-meta.xml
<CustomField>
    <fullName>Solicita_o_especial__c</fullName>
    <label>Solicitação especial</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>