force-app/main/default/objects/Pedido_do_Evento__c/recordTypes/SOLICITA_ES_ESPECIAIS.recordType-meta.xml
<RecordType>
    <fullName>SOLICITA_ES_ESPECIAIS</fullName>
    <active>true</active>
    <label>SOLICITAÇÕES ESPECIAIS</label>
</RecordType>