force-app/main/default/objects/Pedido_do_Evento__c/recordTypes/SOLICITA_O_DE_MATERIAL_DE_MARKETING.recordType-meta.xml
<RecordType>
    <fullName>SOLICITA_O_DE_MATERIAL_DE_MARKETING</fullName>
    <active>true</active>
    <label>SOLICITAÇÃO DE MATERIAL DE MARKETING</label>
</RecordType>